<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginEnd="40dp"
        android:layout_marginStart="40dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:minHeight="200dp"
            app:srcCompat="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/titleTextView"
            style="@style/MainMenuTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textAlignment="center" />

        <Button
            android:id="@+id/toCalc"
            style="@style/MainMenuButtons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/toCalc" />

        <Button
            android:id="@+id/toOffer"
            style="@style/MainMenuButtons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/toOffer" />

        <Button
            android:id="@+id/toOption"
            style="@style/MainMenuButtons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/toOption" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>