<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/titleBack"
        style="@style/historyTitleContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            style="@style/historyTitleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:text="@string/list"
            android:textAlignment="center" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/tooltip"
        style="@style/historyContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleBack">

        <TextView
            android:id="@+id/key"
            style="@style/historyTexts"
            android:background="@drawable/bg_list_icon"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:text="@string/serialno"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/date"
            style="@style/historyTexts"
            android:background="@drawable/bg_list_icon"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:text="@string/time"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/price"
            style="@style/historyTexts"
            android:background="@drawable/bg_list_icon"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:text="@string/price"
            android:textAlignment="center" />

    </LinearLayout>

    <ListView
        android:id="@+id/scrollArea"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tooltip">

    </ListView>
</android.support.constraint.ConstraintLayout>